--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [
     "codesurfer"
   ],
-  "author": "kutyel <flaviocorpa@gmail.com>",
+  "author": "Chetan Sachdev <cksachdev@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cksachdev/presentations/issues"
