--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "deck.mdx",
+      "src": "index.mdx",
       "use": "@now/mdx-deck"
     }
   ]
